# comunidade

./: .gitignore  404.html  README.md  README_EN.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 💜-entrando-na-cumbuca.md
.github/workflows/: cleanup-preview-documentation.yml  comment-preview-documentation.yml  deploy-documentation.yml  deploy-preview-documentation.yml
contribuindo/codigo-de-conduta/: index.html
cumbuca-docs/contribuir/adicionar-pagina/: index.html
cumbuca-docs/contribuir/contribuir/: index.html
cumbuca-docs/contribuir/editar-pagina/: index.html
cumbuca-docs/contribuir/nova-pagina/: index.html
cumbuca-docs/contribuir/remover-pagina/: index.html
cumbuca-docs/intro/: index.html
docs/: CNAME  index.md
docs-temp/nucleos/: laboratorio-cumbuca.md  manual-liderancas.md  manual-pessoa-voluntaria.md  objetivos-e-direcionamento.md
docs-temp/planejamento/: 2026.md
docs/assets/css/: cumbuca-dark.css  cumbuca-light.css  theme.css
docs/assets/js/: font-toggle.js
docs/contribuindo/: index.md
docs/cumbuca-docs/contribuir/: contribuir.md  editar-pagina.md  nova-pagina.md
docs/overrides/partials/: header.html
nucleos-temporario/ nucleo-infra/docs/: guia-do-nucleo-{nome}.md
nucleos-temporario/ nucleo-open-source/docs/: modelo-de-maturidade.md  recomendacoes-de-requisitos.md
nucleos-temporario/ nucleo-open-source/reunioes/: 16-01-26.md
planejamento-temporario/: 2026.md
preview/pr/65/: index.html
preview/pr/67/: sitemap.xml
preview/pr/77/: 404.html  index.html  (+1 more)
search/: search_index.json
(+41 files in other folders)
